r303 (08. 02. 2025):
Added option "Accumulate Damage"

r302 (02. 02. 2025):
Poco Health Floats: Fixed possible crashes after going into custody or finishing a heist

r301 (01. 02. 2025):
Heat Street: Fixed a load crash with Restoration Mod Overhaul installed

r300 (31. 01. 2025):
Rats Day 2: Attempt to fix a load crash with Restoration Mod Overhaul installed

r299 (30. 01. 2025):
Mission Briefing: Framing Frame Day 2 will properly reflect maximum XP based on secured bags in Day 1
Mission Briefing: Watchdogs Day 2 will properly reflect maximum XP based on secured bags in Day 1

r298 (28. 01. 2025):
Added "Show Floating Damage Popup" and "Show Converts Colored to its Owner" option
Added "Weapon Swap" buff
Deployable Tracker: Fixed an issue where the tracker won't show up again after hiding when all deployables were used
Interact buff: Fixed an issue where deployable timer is not covered
Mission Briefing: Fixed an issue where Infamy XP boost is not sometimes properly rounded
Menu: VR related options will appear in VR only
Poco Health Float Style: Fixed an issue where preloaded health floats for Team AI get deleted after you are taken to the custody
XP Diff Tracker: Tracker will increase its size after gaining 1M XP

r297 (26. 01. 2025):
Four Stores: Attempt to fix a crash after opening safes with Restoration Mod Overhaul installed

r296 (23. 01. 2025):
Assault Tracker: Disabled hostage delay in Control state will be reflected in the tracker with a yellow color
Poco Health Float Style: Added "Show Background Blur" option

r295 (18. 01. 2025):
Reservoir Dogs Day 2: Fixed a crash with waypoints

r294 (17. 01. 2025):
Fixed for real a crash after throwing a bag and "Show Bag Outline color based on their weight" is enabled

r293 (16. 01. 2025):
Buffs: Fixed a possible crash after converting an enemy
Possible fix for a crash after throwing a bag and "Show Bag Outline color based on their weight" is enabled

r292 (15. 01. 2025):